<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <View
        android:id="@+id/view4"
        android:layout_width="253dp"
        android:layout_height="303dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/mi_primera_gu_a"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <Button
        android:id="@+id/btnCalculadora"
        android:layout_width="204dp"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#D7D7D7"
        android:text="@string/calculadora"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnDatos"
        android:layout_width="204dp"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#D7D7D7"
        android:text="@string/mis_datos"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/btnFormulario" />

    <Button
        android:id="@+id/btnFormulario"
        android:layout_width="204dp"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#D7D7D7"
        android:text="@string/formulario_login"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculadora" />


</androidx.constraintlayout.widget.ConstraintLayout>